ZODB Requires:
~~~~~~~~~~~~~~
-

New features:
~~~~~~~~~~~~~
- The default schema now has a 'fullname' computed field.
- Separation of entry creation and deletion roles.

Bug fixes:
~~~~~~~~~~
- listEntryIds() returned all objects in the LDAP regardless of objectClass.

New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-