@@ -10,7 +10,9 @@ New features:
 Bug fixes:
 ~~~~~~~~~~
 - listEntryIds() returned all objects in the LDAP regardless of objectClass.
-
+- LDAPDirectory now converts Files, Images and 'None' to strings for
+  LDAP Storage.
+  
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
